<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFFFF"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFFFF"
        android:paddingBottom="-16dp"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="303dp"
                android:layout_marginBottom="23dp"
                >
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_klasifikasi"
                    app:shapeAppearanceOverlay="@style/br41bl41"
                    android:layout_width="match_parent"
                    android:layout_height="303dp"
                    android:src="@drawable/organik_waste"
                    android:scaleType="fitXY"
                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="11dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#FF000000"
                    android:orientation="vertical">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/title"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:layout_marginBottom="46dp"
                        android:layout_marginStart="1dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="Hasil Klasifikasi Sampah"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_marginBottom="28dp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tipesampah"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:layout_marginEnd="41dp"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="Tipe Sampah :"
                            />
                        <TextView
                            android:id="@+id/hasil_tipe"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:text="@string/anorganik"
                            />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/sugestion"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:layout_marginBottom="15dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/suggestion"
                        />
                    <TextView
                        android:id="@+id/hasil_sugestion"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:text="@string/hasil_sugest"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>